@@ -57,6 +57,8 @@ static const char* snort_help =
 "--help-config [<module prefix>] output matching config options\n"
 "--help-gids [<module prefix>] output matching generators\n"
 "--help-module <module> output description of given module\n"
+"--help-modules list all available modules with brief help\n"
+"--help-plugins list all available plugins with brief help\n"
 "--help-options [<option prefix>] output matching command line options\n"
 "--help-signals dump available control signals\n"
 "--list-modules list all known modules\n"
@@ -76,13 +78,13 @@ static const char* snort_help =
 "\n"
 "    type name = default: help { range }\n"
 "\n"
-"+ For Lua configuration (not IPS rules), if the name ends with [] it is a\n"
-"  list item and can be repeated.\n"
-"+ For IPS rules only, names starting with ~ indicate positional parameters.\n"
-"  The name does not appear in the rule.\n"
-"+ IPS rules may also have a wild card parameter, which is indicated by a *.\n"
-"  Only used for metadata that Snort ignores.\n"
-"+ The snort module has command line options starting with a -.\n"
+"++ For Lua configuration (not IPS rules), if the name ends with [] it is a\n"
+"   list item and can be repeated.\n"
+"++ For IPS rules only, names starting with ~ indicate positional parameters.\n"
+"   The name does not appear in the rule.\n"
+"++ IPS rules may also have a wild card parameter, which is indicated by a *.\n"
+"   Only used for metadata that Snort ignores.\n"
+"++ The snort module has command line options starting with a -.\n"
 ;
 
 //-------------------------------------------------------------------------
